Flexbox re-instated, alignment fixed, ExpressJS alignment working.

--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -5,45 +5,29 @@
   min-height: 425px;
   margin: 50px 10%;
   padding: 20px;
-  /* box-shadow: 0px 15px 25px -25px black; */
-  display: grid;
-  justify-content: center;
-  /* grid-template-columns: repeat(6, 1fr);  */
-  /* grid-template-rows: 40px 230px 25px 50px; */
-  /* column-gap: 300px; */
-  column-gap: 25%;
-  grid: 
-    ". title title desc desc ." 40px
-    ". img img para para ." 230px
-    ". icons icons . . ." 25px
-    ". buttons buttons . . ." 75px
-    / 1fr 1fr 1fr 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .Left {
-  margin: 15px 0px;
-  grid-column: 2 / 4;
-  grid-row: 1 / 6;
-  /* justify-content: center; */
-  /* place-content: center; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* margin: 10px; */
+  max-width: 400px;
 }
 
 .Right {
-  /* display: grid; */
-  /* display: flex; */
-  margin: 15px 0px;
-  /* text-indent: 50px; */
-  grid-column: 4 / 6;
-  grid-row: 1 / 6;
-  justify-content: center;
-  /* place-items: center; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  margin: 10px;
+  max-width: 400px;
 }
 
 .Title {
   text-align: center;
-  /* justify-self: center; */
-  grid-area: title;
-  /* grid-column: 2 / 4; */
+  /* grid-area: title; */
 }
 
 .Thumbnail {
@@ -51,14 +35,14 @@
   box-shadow: 0px 8px 15px -10px black;
   max-width: 400px;
   max-height: 250px;
-  grid-area: img;
+  /* grid-area: img; */
   margin: 0 auto;
 }
 
 .Tag {
   display: flex;
   margin-top: 10px;
-  grid-area: icons; 
+  /* grid-area: icons;  */
 }
 
 .Tag i {
@@ -73,6 +57,7 @@
 }
 
 .Icon {
+  /* grid-area: icons; */
   display: flex;
   justify-content: center;
   margin-top: 5px;
@@ -80,7 +65,11 @@
 
 .Icon i {
   margin: 10px;
-  /* background: blue; */
+}
+
+.ExpressJS {
+  display: flex;
+  align-items: baseline;
 }
 
 .ExpressJS span {
@@ -96,15 +85,14 @@
   display: flex;
   justify-content: center;
   margin: 10px;
-  grid-area: buttons;
 }
 
 .Buttons a {
   color: black;
-  border: solid black;
+  border: solid black 2px;
   border-radius: 25px;
   padding: 8px 30px 10px 30px;
-  margin: 0 30px;
+  margin: 0 20px;
 }
 
 .Buttons a:hover {
@@ -127,27 +115,23 @@
 .DescriptionHeader {
   text-align: center;
   /* font-weight: normal; */
-  grid-area: desc;
+  /* grid-area: desc; */
 }
 
-.Description {
-  grid-area: para;
-  /* grid-column: 4 / 6;
-  grid-row: 2 / 3; */
-}
-
-@media screen and (min-width: 360px) and (max-width: 1250px) {
+@media screen and (min-width: 360px) and (max-width: 1140px) {
   
   .PortfolioItem {
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    /* grid: 
-    "title title title title title title" 40px
-    "img" 230px
-    "icons" 25px
-    "buttons" 75px
-    "para" 40px
-    / 1fr; */
+  }
+
+  .Left {
+    max-width: 100%;
+  }
+
+  .Right {
+    max-width: 100%;
   }
 
   .Thumbnail {
@@ -157,12 +141,14 @@
   }
   
   .Description {
-    max-width: 450px;
     margin: 0 auto;
+    max-width: 400px;
   }
 
   .Buttons a {
     margin: 0 10px;
-  }
-  
+  }  
 }
+
+/* @media screen and (min-width: 360px) {} */
+
